--- a/resources/js/sass/style.scss
+++ b/resources/js/sass/style.scss
@@ -28,6 +28,7 @@ $lightColor: #e4ecff;
 
         &--hero {
             padding-top: 12rem;
+            padding-bottom: 8rem;
             gap: 2rem;
         }
 
@@ -279,6 +280,7 @@ $lightColor: #e4ecff;
         flex-direction: column;
         gap: 2rem;
         text-align: left;
+        position: relative;
     }
 
     &__image-wrapper {
@@ -293,7 +295,8 @@ $lightColor: #e4ecff;
     &__image-background {
         width: 100%;
         object-fit: cover;
-        position: relative;
+        position: absolute;
+        top: 0;
         z-index: 1;
     }
 
@@ -316,6 +319,7 @@ $lightColor: #e4ecff;
         height: 200px;
         transform: translate(-50%, 10%) rotate(2deg);
         border-radius: 1rem;
+
         z-index: 2;
     }
 
@@ -517,6 +521,7 @@ $lightColor: #e4ecff;
 
             &--hero {
                 padding-top: 16rem;
+                padding-bottom: 12rem;
             }
 
             &--contact {
