--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -30,11 +30,15 @@ $lightColor: #e4ecff;
             padding-top: 12rem;
             // padding-bottom: 8rem;
             gap: 2rem;
+            position: relative;
+            z-index: 2;
         }
 
         &--contact {
             gap: 4rem;
             padding-block: 4rem;
+            position: relative;
+            z-index: 2;
         }
     }
 
@@ -139,10 +143,18 @@ $lightColor: #e4ecff;
 .hero {
     width: 100%;
     background-color: $darkColor;
-    background-image: url("../../../public/img/grid-pattern.png");
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+
+    &__background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1;
+    }
 
     &__top-text {
         color: $lightColor;
@@ -490,10 +502,19 @@ $lightColor: #e4ecff;
 
 .contact {
     background-color: #000319;
-    background-image: url("../../../public/img/grid-pattern.png");
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+
+    &__background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
     &__main {
         display: flex;
